@@ -1,5 +1,11 @@
 2009-01-26  Alexandre Ferrieux	<ferrieux@users.sourceforge.net>
 
+	* generic/tclInt.h:   Fix [Bug 1028264]: WSACleanup() too early.
+	* generic/tclEvent.c: The fix introduces "late exit handlers"
+	* win/tclWinSock.c:   for similar late process-wide cleanups.
+
+2009-01-26  Alexandre Ferrieux	<ferrieux@users.sourceforge.net>
+
 	* win/tclWinSocl.c: Fix [Bug 2446662]: resync Win behavior on RST
 	with that of unix (EOF).
 	
